--- a/src/App.css
+++ b/src/App.css
@@ -209,6 +209,13 @@ body {
   .form .delete-button img {
     width: 30px;
   }
+
+  input,
+  textarea,
+  select,
+  button {
+    font-size: 16px;
+  }
 }
 
 @media (min-width: 1024px) and (max-width: 1366px) and (orientation: landscape) {
